k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jeremy-opare
  labels:
    name: jeremy-opare
    project: capstone
