k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-ingress
  namespace: jeremy-opare
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # If cert-manager is available
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jeremy-opare.capstone.company.com
    secretName: capstone-tls
  rules:
  - host: jeremy-opare.capstone.company.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
